feat: add messages to private and server channels
